# osm-horizontal-curvature

./: .gitignore  LICENSE  README.md  main.py  network.tex  pwinterpolation.py  pyproject.toml
curvy/: __init__.py  curvy.py  error_estimation.py  logging_conf.yaml
curvy/tests/: test_curvy.py
curvy/utils/: __init__.py  interpcurve.py  osm.py  query.py  result.py  utils.py
data/: mannheim.pkl  mannheim_osm_mappings.json
dataloader/: dataset.py  utils.py
tests/: test_curvy.py
