[tool.poetry]
name = "osm-horizontal-curvature"
version = "0.1.0"
description = "Library to retrieve OSM railway track data and calculate curvature"
authors = ["Philipp Simon Leibner <philip.leibner@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
